--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Docs</title>
-    <meta http-equiv="refresh" content="0;/docs">
+    <meta http-equiv="refresh" content="0;/lib9c/docs">
     <base href="/docs" />
 </head>
 <body>
