--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>Docs</title>
     <meta http-equiv="refresh" content="0;/lib9c/docs">
-    <base href="/docs" />
+    <base href="/lib9c/docs" />
 </head>
 <body>
     Body
