--- a/development/toc.html
+++ b/development/toc.html
@@ -18,6 +18,9 @@
                 <li>
                     <a href="api/Lib9c.html" name="api/toc.html" title="API">API</a>
                 </li>
+                <li>
+                    <a href="contributing/documentation/structure.html" name="contributing/toc.html" title="Contributing">Contributing</a>
+                </li>
           </ul>
       </div>
     </div>
